--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer base {
+  h1 {
+    font-size: 34px;
+  }
+}
+
+@layer base {
   :root {
     --radius: 0.5rem;
+    --white: #ffffff;
+    --black: #16171d;
+    --primary: #c79e57;
+    --secondary: #ffebb3;
+    --accent: #fff5db;
+    --hover:#927036;
+    --dark-gold:B37200;
   }
 }
