--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-inter);
 }
 
 @layer base {
@@ -18,10 +17,10 @@ body {
     --radius: 0.5rem;
     --white: #ffffff;
     --black: #16171d;
-    --primary: #c79e57;
+    --primary: #A88DF9;
     --secondary: #ffebb3;
     --accent: #fff5db;
-    --hover:#927036;
+    --hover:#7a60c8;
     --dark-gold:B37200;
   }
 }
