feat : UI overhaul for landing page, sign up page and login page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,7 @@ body {
     --secondary: #ffebb3;
     --accent: #fff5db;
     --hover:#7a60c8;
+    --hover-light:#2A1D3C;
     --dark-gold:B37200;
   }
 }
