--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,13 @@ body {
 }
 
 @layer base {
+  h2 {
+    font-size: 24px;
+  }
+}
+
+
+@layer base {
   :root {
     --radius: 0.5rem;
     --white: #ffffff;
