feat : Add Navbar component and update styles; modify button sizes and colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,10 +25,8 @@ body {
     --white: #ffffff;
     --black: #16171d;
     --primary: #A88DF9;
-    --secondary: #ffebb3;
-    --accent: #fff5db;
+    --secondary: #CFBEFF;
     --hover:#7a60c8;
     --hover-light:#2A1D3C;
-    --dark-gold:B37200;
   }
 }
